--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -1,19 +1,43 @@
 .input {
-    background-color: whitesmoke;
-    border: 1px solid #000;
-    padding: 6px 8px;
-    border-radius: 8px;
-    margin: 2rem;
+  background-color: whitesmoke;
+  border: 1px solid #000;
+  padding: 6px 8px;
+  border-radius: 8px;
+  margin: 2rem;
 }
 
 .button {
-    background-color: rgb(255, 194, 41);
-    border: none;
-    margin: 20px;
-    padding: 30px;
-    height: 10px;
+  background-color: rgb(255, 194, 41);
+  border-radius: 50%;
+  border: 2px dashed;
+  margin: 20px;
+  padding: 30px;
+  height: 10px;
+  transition: all 0.5s;
+  animation: girar 1s linear infinite;
+  position: relative;
 }
 
-.button:hover{
-    background: linear-gradient(to right rgb(255, 194, 41), rgb(108, 82, 24),rgb(0, 0, 0)) ;
+.button::after {
+  content: "";
+  position: absolute;
+  border: 2px solid #000;
+  top: 50%;
+  left: 50%;
+}
+
+.button:hover {
+    background: linear-gradient(to right, rgb(247, 245, 239), rgb(229, 82, 74), rgb(238, 79, 79));
+
+  /* background-color: #000; */
+  transform: rotate(90deg);
+}
+
+@keyframes girar {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
